# SistemaVisualizacaoGrafica

./: .~lock.INSTALACAO.md#  ARQUITETURA.md  CHECKLIST.md  CMakeLists.txt  Makefile  README.md  verificar_arquivos.sh
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: lightingFrag.glsl  lightingVert.glsl  vertexShader.glsl
src/: Camera.h  Light.h  Mesh.h  Shader.h  main.cpp
